@@ -907,7 +907,6 @@ switch($itemType) {
 		$table->setHeader(array(
 			new CCheckBox('all_items',null,"checkAll('".$form->GetName()."','all_items','group_itemid');"),
 			S_WIZARD,
-			make_sorting_header(S_STATUS,'status'),
 			$show_host?S_HOST:null,
 			make_sorting_header(_('Name'),'name'),
 			S_TRIGGERS,
@@ -916,6 +915,7 @@ switch($itemType) {
 			make_sorting_header(S_HISTORY,'history'),
 			make_sorting_header(S_TRENDS,'trends'),
 			make_sorting_header(S_TYPE,'type'),
+			make_sorting_header(S_STATUS,'status'),
 			S_APPLICATIONS,
 			S_ERROR
 		));
@@ -1165,7 +1165,6 @@ switch($itemType) {
 			$table->addRow(array(
 				$cb,
 				$menuicon,
-				$status,
 				$host,
 				$description,
 				$trigger_info,
@@ -1174,6 +1173,7 @@ switch($itemType) {
 				$item['history'],
 				(in_array($item['value_type'], array(ITEM_VALUE_TYPE_STR, ITEM_VALUE_TYPE_LOG, ITEM_VALUE_TYPE_TEXT)) ? '' : $item['trends']),
 				item_type2str($item['type']),
+				$status,
 				new CCol($applications, 'wraptext'),
 				$error
 			));
