@@ -6,6 +6,7 @@ A.F....... [ZBXNEXT-906] redesign Configuration->Host groups (Eduard)
 ....I..... [ZBX-4024] new build process for database schema and data, also new location of database related files; db data file uses transactions now (Alexei)
 
 Bug fixes:
+..F....... [ZBX-2074] in item and trigger list move status column to the right
 A......... [ZBX-4403] fixed low level discovery rule creation (pavels)
 ..F.I...S. [ZBX-3832] removed support of aggregated graph items (pavels, Sasha)
 ..F....... [ZBX-4235] fixed operations with decimal numbers for certain locales (pavels)
